class Document {
    constructor(series, number, issueDate) {
        this.series = series;
        this.number = number;
        this.issueDate = issueDate;
    }
}

module.exports = Document;