class Job {
    constructor(companyName, phone, address) {
        this.companyName = companyName;
        this.phone = phone;
        this.address = address;
    }
}

module.exports = Job;